[package]
name = "fixing-rs-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = { path = "../rust-typed-arena" }
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
priority-queue = "1.3.1"
getset = "0.1.2"
syn = { version = "2.0.18", features = ["full"] }
quote = "1.0.28"
proc-macro2 = "1.0.60"
lazy_static = "1.4.0"
subprocess = "0.2.9"
log = "0.4.19"
backtrace = "0.3.67"
splr = "0.17.0"

[build-dependencies]
lalrpop = "0.20.0"
