[package]
name = "fixing-rs-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
fixing-rs-base = { path = "../fixing-rs-base" }
syn = { version = "2.0.18", features = ["full"] }
quote = "1.0.28"
proc-macro2 = "1.0.60"
convert_case = "0.6.0"

[build-dependencies]
rustc_version = "0.4.0"